Fix padding on notification bell
So that it isn't squished up against the button.

--- a/bzkanban.css
+++ b/bzkanban.css
@@ -168,6 +168,7 @@ body {
 }
 #notification {
     display: none;
+    margin-left: 5px;
 }
 #nav {
     flex: none;
